--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/all.css">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/all.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Resume</title>
 </head>
 <body>
@@ -238,6 +238,6 @@
             </div>
         </div>
     </div>
-    <script src="/script/script.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 </html>
